<resources>
    <string name="app_name">Canvas</string>
    <string name="create_join_lobby">Create/Join Lobby</string>
    <string name="username">Username</string>
    <string name="lobby_code">Lobby code</string>
    <string name="create_join">Create/Join</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="exit_lobby">Quit Game</string>
    <string name="exit_lobby_message">Are you sure you want to leave the game?</string>
    <string name="copy">Copy</string>
    <string name="remove">Remove</string>
    <string name="players">Players</string>
    <string name="messages">Messages</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="message">Message</string>
    <string name="you">You</string>
    <string name="admin">Admin</string>
    <string name="please_choose_a_word">Please choose a word in</string>
    <string name="undo">Undo</string>
    <string name="clear">Clear</string>
    <string name="color_picker">Color Picker</string>
    <string name="guess">Guess</string>
</resources>